[Gordon] 統一調整前端模板

--- a/templates/login/reset_password.html
+++ b/templates/login/reset_password.html
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <title>忘記密碼</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>Bookmazon</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <style>
+        body {
+            background-size: cover;
+            background-repeat: no-repeat;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+         height: 85vh;
+        }
+    </style>
 </head>
-<body>
-
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title text-center mb-4">重置密碼</h3>
-
-                    <!-- Flash 消息 -->
-                    {% with messages = get_flashed_messages() %}
-                        {% if messages %}
-                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                {% for message in messages %}
-                                    {{ message }}<br>
-                                {% endfor %}
-                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                            </div>
-                        {% endif %}
-                    {% endwith %}
-
-                    <!-- reset 密碼表單 -->
-                    <form method="POST" action="{{ url_for('userController.reset_password', token=token) }}">
-                        {{ form.csrf_token }}
-                        <div class="form-floating mb-3">
-                            {{ form.new_password(class="form-control", placeholder="Enter your new password") }}
-                            <label>新密碼</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            {{ form.confirm_password(class="form-control", placeholder="Enter your confirm password") }}
-                            <label>確認密碼</label>
-                        </div>
-                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                            <a class="small" href="{{ url_for('userController.login') }}">返回登入</a>
-                            <button type="submit" class="d-grid btn btn-primary btn-block">確認</button>
-                        </div>
-                    </form>
+<body id="backgroundBody">
+{% include './common/header.html' %}
+<div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+        <main>
+            <div class="container">
+                <div class="row justify-content-center">
+                    {% include 'login/resetPasswordForm.html' %}
                 </div>
             </div>
-        </div>
+        </main>
     </div>
+    {% include './common/footer.html' %}
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+<script>
+    // JavaScript to toggle background images
+    const backgroundBody = document.getElementById('backgroundBody');
+    const images = ['bookstore_1.jpg', 'bookstore_2.jpg', 'bookstore_3.jpg', 'bookstore_4.jpg', 'bookstore_5.jpg', 'bookstore_6.jpg'];
+    const randomIndex = Math.floor(Math.random() * images.length);
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    function toggleBackgroundImage() {
+        const imageUrl = "{{ url_for('static', filename='assets/img/') }}" + images[randomIndex];
+        backgroundBody.style.backgroundImage = 'url("' + imageUrl + '")';
+    }
+
+    // Call the function to toggle background image
+    toggleBackgroundImage();
+
+
+</script>
 </body>
 </html>
