--- a/templates/common/404.html
+++ b/templates/common/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -14,53 +14,31 @@
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
-    <style>
-        body {
-            background-size: cover;
-            background-repeat: no-repeat;
-            height: 100vh;
-            margin: 0;
-            padding: 0;
-        }
-
-        main {
-         height: 85vh;
-        }
-
-    </style>
 </head>
-<body id="backgroundBody">
+<body>
 {% include './common/header.html' %}
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
+<div id="layoutError">
+    <div id="layoutError_content">
         <main>
             <div class="container">
                 <div class="row justify-content-center">
-                    {% include 'login/loginForm.html' %}
+                    <div class="col-lg-6">
+                        <div class="text-center mt-4">
+                            <img class="mb-4 img-error"
+                                 src="{{ url_for('static', filename='assets/img/Monochrome-App-User.png') }}"/>
+                            <p class="lead">This requested URL was not found on this server.</p>
+                            <a href="index_admin.html">
+                                <i class="fas fa-arrow-left me-1"></i>
+                                Return to Dashboard
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
     </div>
     {% include './common/footer.html' %}
-</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-<script>
-    // JavaScript to toggle background images
-    const backgroundBody = document.getElementById('backgroundBody');
-    const images = ['bookstore_1.jpg', 'bookstore_2.jpg', 'bookstore_3.jpg', 'bookstore_4.jpg', 'bookstore_5.jpg', 'bookstore_6.jpg'];
-    const randomIndex = Math.floor(Math.random() * images.length);
-
-    function toggleBackgroundImage() {
-        const imageUrl = "{{ url_for('static', filename='assets/img/') }}" + images[randomIndex];
-        backgroundBody.style.backgroundImage = 'url("' + imageUrl + '")';
-    }
-
-    // Call the function to toggle background image
-    toggleBackgroundImage();
-
-
-
-</script>
 </html>
