--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
-    <title>Register - SB Admin</title>
-    <link href="../static/css/styles_admin.css" rel="stylesheet"/>
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <title>Bookmazon</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
     <style>
         body {
             background-size: cover;
@@ -18,8 +23,9 @@
             padding: 0;
         }
 
-
-
+        main {
+         height: 85vh;
+        }
     </style>
 </head>
 <body id="backgroundBody">
@@ -36,9 +42,9 @@
     </div>
     {% include './common/footer.html' %}
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-<script src="../static/js/scripts.js"></script>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 <script>
     // JavaScript to toggle background images
     const backgroundBody = document.getElementById('backgroundBody');
@@ -46,7 +52,7 @@
     const randomIndex = Math.floor(Math.random() * images.length);
 
     function toggleBackgroundImage() {
-        const imageUrl = '../static/assets/img/' + images[randomIndex];
+        const imageUrl = "{{ url_for('static', filename='assets/img/') }}" + images[randomIndex];
         backgroundBody.style.backgroundImage = 'url("' + imageUrl + '")';
     }
 
@@ -56,5 +62,4 @@
 
 
 </script>
-</body>
 </html>
