--- a/templates/order/viewOrderDetails.html
+++ b/templates/order/viewOrderDetails.html
@@ -33,7 +33,7 @@
             {% elif order.order_status == '1' %}
             <span class="badge bg-success">完成</span>
             {% elif order.order_status == '2' %}
-            <span class="badge bg-danger">取消</span>
+            <span class="badge bg-danger">取消中</span>
             {% endif %}
         </div>
         <h3>商品列表</h3>
