--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -10,7 +10,6 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
@@ -22,6 +21,7 @@
         .quantity-input {
             width: 80px;
         }
+
 
     </style>
 </head>
@@ -39,37 +39,37 @@
     {% endfor %}
     {% endwith %}
     {% if cart_items|length > 0 %}
-        <table class="table">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>書名</th>
-                    <th>價格</th>
-<!--                    <th>數量</th>-->
-<!--                    <th>小計</th>-->
-                    <th>數量</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for cart_item, item, book in cart_items %}
-                <tr>
-                    <td>
-                        <form action="{{ url_for('cartController.remove_from_cart', cart_item_id=cart_item.cart_item_id) }}"
-                              method="post">
-                            <button type="submit" class="btn-close"></button>
-                        </form>
-                    </td>
-                    <td>{{ book.book_name }}</td>
-                    <td>{{ book.book_price }}</td>
-<!--                    <td>{{ cart_item.quantity }}</td>-->
-<!--                    <td>{{ cart_item.quantity * book.book_price }}</td>-->
-                    <td>
-                        {{ cart_item.quantity }}
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+    <table class="table">
+        <thead>
+        <tr>
+            <th></th>
+            <th>書名</th>
+            <th>價格</th>
+            <!--                    <th>數量</th>-->
+            <!--                    <th>小計</th>-->
+            <th>數量</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for cart_item, item, book in cart_items %}
+        <tr>
+            <td>
+                <form action="{{ url_for('cartController.remove_from_cart', cart_item_id=cart_item.cart_item_id) }}"
+                      method="post">
+                    <button type="submit" class="btn-close"></button>
+                </form>
+            </td>
+            <td>{{ book.book_name }}</td>
+            <td>{{ book.book_price }}</td>
+            <!--                    <td>{{ cart_item.quantity }}</td>-->
+            <!--                    <td>{{ cart_item.quantity * book.book_price }}</td>-->
+            <td>
+                {{ cart_item.quantity }}
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
     <div class="d-flex justify-content-end">
         <h4 class="me-2">總計：</h4>
         <h4>{{ total_price }}</h4>
@@ -90,4 +90,6 @@
 {% include 'common/footer.html' %}
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </html>
