--- a/templates/login/resetPasswordForm.html
+++ b/templates/login/resetPasswordForm.html
@@ -21,10 +21,16 @@
                 <div class="form-floating mb-3">
                     {{ form.new_password(class="form-control", placeholder="Enter your new password") }}
                     <label>新密碼</label>
+                    {% for error in form.new_password.errors %}
+                        <span style="color: red;">{{ error }}</span><br>
+                    {% endfor %}
                 </div>
                 <div class="form-floating mb-3">
                     {{ form.confirm_password(class="form-control", placeholder="Enter your confirm password") }}
                     <label>確認密碼</label>
+                    {% for error in form.confirm_password.errors %}
+                        <span style="color: red;">{{ error }}</span><br>
+                    {% endfor %}
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="{{ url_for('userController.login') }}">返回登入</a>
