--- a/templates/login/changePasswordForm.html
+++ b/templates/login/changePasswordForm.html
@@ -19,10 +19,16 @@
                 <div class="form-floating mb-3">
                     {{ form.current_password(class="form-control", placeholder="Enter your current password") }}
                     <label>舊密碼</label>
+                    {% for error in form.current_password.errors %}
+                        <span style="color: red;">{{ error }}</span><br>
+                    {% endfor %}
                 </div>
                 <div class="form-floating mb-3">
                     {{ form.new_password(class="form-control", placeholder="Enter your new password") }}
                     <label>新密碼</label>
+                    {% for error in form.new_password.errors %}
+                        <span style="color: red;">{{ error }}</span><br>
+                    {% endfor %}
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="{{ url_for('userController.user_profile') }}">返回會員資料</a>
