--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -12,10 +12,13 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/search.css') }}" rel="stylesheet"/>
 </head>
 
 <body>
@@ -66,6 +69,8 @@
 </section>
 {% include 'common/modal.html' %}
 {% include 'common/footer.html' %}
+<script src="{{ url_for('static', filename='js/slide.js') }}"></script>
+<script src="{{ url_for('static', filename='js/search.js') }}"></script>
 </body>
 <script>
     document.querySelector('.add-to-cart-button').addEventListener('click', function(event) {
