--- a/templates/product/header.html
+++ b/templates/product/header.html
@@ -19,6 +19,10 @@
                     <span class="badge bg-dark text-white ms-1 rounded-pill" id="cartItemCount">{{ cart_item_count }}</span> <!-- 您可以修改這裡的數字以反映實際的購物車物品數量 -->
                 </a>
                 <!-- 如果使用者已登入，則導向到查看所有訂單 -->
+                <a href="{{ url_for('orderController.view_order') }}" class="btn btn-outline-dark ms-2">
+                    <i class="bi bi-receipt me-1"></i>
+                        查看訂單
+                </a>
 
             {% else %}
                 <!-- 不顯示按紐 -->
