Revert "Merge remote-tracking branch 'origin/dev' into dev"
This reverts commit 32994865dab9d256bdef183e28b33ef2a6b18c2d

--- a/templates/login/reset_password_email.html
+++ b/templates/login/reset_password_email.html
@@ -144,7 +144,7 @@
                                 3. 如果您發現任何異常或懷疑不正常的活動，請立即聯繫我們的客戶服務團隊。
                             </p>
                             <p style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
-                                請注意，我們永遠不會要求您在電子郵件中提供密碼或其他敏感資訊。請保護好您的帳戶資訊，避免透露給他人。</p>
+                                請注意，我們永遠不會要求您在電子郵件中提供密碼或其他敏感信息。請保護好您的帳戶資訊，避免透露給他人。</p>
                             <p style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
                                 謝謝您的理解與合作。</p>
                             <p style="font-family: Helvetica, sans-serif; font-size: 16px; font-weight: normal; margin: 0; margin-bottom: 16px;">
