--- a/templates/cart.html
+++ b/templates/cart.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
@@ -17,9 +18,6 @@
     <style>
         .content-body {
             min-height: 80vh;
-        }
-        .quantity-input {
-            width: 80px;
         }
 
 
@@ -42,33 +40,30 @@
     <table class="table">
         <thead>
         <tr>
-            <th></th>
             <th>書名</th>
             <th>價格</th>
-            <!--                    <th>數量</th>-->
-            <!--                    <th>小計</th>-->
             <th>數量</th>
+            <th>小計</th>
+            <th>刪除商品</th>
         </tr>
         </thead>
         <tbody>
         {% for cart_item, item, book in cart_items %}
         <tr>
+            <td>{{ book.book_name }}</td>
+            <td>{{ book.book_price }}</td>
+            <td>{{ cart_item.quantity }}</td>
+            <td>{{ cart_item.quantity * book.book_price }}</td>
             <td>
                 <form action="{{ url_for('cartController.remove_from_cart', cart_item_id=cart_item.cart_item_id) }}"
                       method="post">
-                    <button type="submit" class="btn-close"></button>
+                    <button type="submit" class="btn btn-danger">刪除</button>
                 </form>
-            </td>
-            <td>{{ book.book_name }}</td>
-            <td>{{ book.book_price }}</td>
-            <!--                    <td>{{ cart_item.quantity }}</td>-->
-            <!--                    <td>{{ cart_item.quantity * book.book_price }}</td>-->
-            <td>
-                {{ cart_item.quantity }}
             </td>
         </tr>
         {% endfor %}
         </tbody>
+
     </table>
     <div class="d-flex justify-content-end">
         <h4 class="me-2">總計：</h4>
@@ -77,12 +72,12 @@
     <div class="d-flex justify-content-between mt-3">
         <a href="{{ url_for('productController.getProducts') }}" class="btn btn-secondary">繼續購物</a>
 
-        <!-- 商品結帳-->
-        <a href="{{ url_for('cartController.checkout') }}" class="btn btn-secondary">前往結帳</a>
+        <!-- TODO : 結帳功能-->
+        <a href="#" class="btn btn-primary">前往結帳</a>
     </div>
     {% else %}
     <div class="alert alert-warning" role="alert">
-        {{current_user.user.user_account}}的購物車是空的！
+        {{current_user.user_account}}的購物車是空的！
     </div>
     <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回商店</a>
     {% endif %}
@@ -90,6 +85,4 @@
 {% include 'common/footer.html' %}
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </html>
