--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -12,13 +12,10 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
-    <link href="{{ url_for('static', filename='css/search.css') }}" rel="stylesheet"/>
 </head>
 
 <body>
@@ -53,7 +50,7 @@
                 <p class="lead">更新時間: {{ data.update_datetime }}</p>
                 {% if data.item_status == '1' %}
                 <form method="POST" action="{{ url_for('cartController.add_to_cart') }}">
-                    <input type="hidden" name="item_id" value="{{ data.item_id }}"  min="0" oninput="validateInput()">/>
+                    <input type="hidden" name="item_id" value="{{ data.item_id }}"/>
                     <div class="d-flex">
                         <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" style="max-width: 5rem" />
                         <button class="btn btn-outline-dark flex-shrink-0 add-to-cart-button" type="button">
@@ -69,8 +66,6 @@
 </section>
 {% include 'common/modal.html' %}
 {% include 'common/footer.html' %}
-<script src="{{ url_for('static', filename='js/slide.js') }}"></script>
-<script src="{{ url_for('static', filename='js/search.js') }}"></script>
 </body>
 <script>
     document.querySelector('.add-to-cart-button').addEventListener('click', function(event) {
@@ -136,12 +131,7 @@
         });
     });
 
-    function validateInput() {
-        var item_id_input = document.getElementById('item_id_input');
-        if (item_id_input.value < 0) {
-            item_id_input.value = 0; // 如果值為負數，則設定為0
-        }
-    }
+
 
 
 
